Fix progress bar z-index

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -24,6 +24,7 @@ body {
   top: 0;
   left: 0;
   opacity: 0.7;
+  z-index: 100;
 }
 
 .scroll-up {
